[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-rate-tracker"
version = "0.1.0"
description = "Track the Canadian prime rate and record changes in SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

